aggiunta thumbnailator, preparazione per la generazione dei controller dto tramite script yaml con codegen