@@ -4,36 +4,43 @@ import com.simonegenovesi.extractorfiledata.entity.MetadatiRisorsa;
 import com.simonegenovesi.extractorfiledata.entity.Metrica;
 import com.simonegenovesi.extractorfiledata.util.dto.FileProcessati;
 import lombok.extern.slf4j.Slf4j;
+import net.coobird.thumbnailator.Thumbnails;
 
+import javax.imageio.ImageIO;
+import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.simonegenovesi.extractorfiledata.util.MimeType.deduciFormatoFile;
 
 @Slf4j
-public class Files {
+public class Elementi {
+
+    private Elementi() {
+    }
 
     public static List<File> getAllFilesFromFolders(String pathBase, String folderPath) {
         var start = System.nanoTime();
         List<File> fileList = new ArrayList<>();
         var rootDir = Paths.get(pathBase, folderPath);
 
-        if (java.nio.file.Files.exists(rootDir) && java.nio.file.Files.isDirectory(rootDir)) {
-            try (var stream = java.nio.file.Files.walk(rootDir)) {
+        log.info("Searching in... {}", rootDir);
+
+        if (Files.exists(rootDir) && Files.isDirectory(rootDir)) {
+            try (var stream = Files.walk(rootDir)) {
                 fileList = stream
-                        .filter(java.nio.file.Files::isRegularFile) // Filtra solo i file
+                        .filter(Files::isRegularFile) // Filtra solo i file
                         .map(Path::toFile)         // Converte Path in File
-                        .collect(Collectors.toList());
+                        .toList();
             } catch (IOException e) {
                 log.error("Errore durante la lettura della directory: {}", e.getMessage());
-                // Gestisci l'eccezione, ad esempio ritornando una lista vuota o null
                 return new ArrayList<>(); // Restituisce una lista vuota in caso di errore
             }
         }
@@ -50,6 +57,7 @@ public class Files {
         Map<String, Metrica.MetricheSummary> metricheMap = new HashMap<>(fileCount);
         List<MetadatiRisorsa> metadatiList = new ArrayList<>(fileCount);
         List<Metrica.DettaglioRisorsa> dettagliRisorse = new ArrayList<>();
+        List<File> listaTiffImages = new ArrayList<>();
         long dimTotale = 0;
 
         // Caching dei MIME type per evitare chiamate ripetute a Tika
@@ -61,11 +69,14 @@ public class Files {
             // Recupera MIME type dalla cache o calcolalo se necessario
             MimeTypeEnum mimeEnum = deduciFormatoFile(file);
             String formatoFile = mimeCache.computeIfAbsent(file, m -> mimeEnum.getAbbreviation().toLowerCase());
-//            MimeTypeEnum mimeEnum = MimeTypeEnum.fromString(formatoFile);
             String formatoAbbreviato = mimeEnum.getAbbreviation();
             String nomeOggetto = getString(file, mimeEnum);
 
-            // Creazione MetadatiRisorse
+            if (isTiffImage(formatoAbbreviato)) {
+                listaTiffImages.add(file);
+            }
+
+                // Creazione MetadatiRisorse
             metadatiList.add(MetadatiRisorsa.builder()
                     .urlOggetto(file.getAbsolutePath())
                     .nomeOggetto(nomeOggetto)
@@ -112,7 +123,7 @@ public class Files {
 
         var end = System.nanoTime();
         log.info("Tempo di elaborazione dei file: {} ms", (end - start) / 1_000_000);
-        return new FileProcessati(metadatiList, metriche);
+        return new FileProcessati(metadatiList, metriche, listaTiffImages);
     }
 
     private static String getString(File file, MimeTypeEnum mimeEnum) {
@@ -133,4 +144,60 @@ public class Files {
         return nomeOggetto;
     }
 
+    public static void doThumbnail(List<File> imageFiles) {
+        long start = System.nanoTime();
+        log.info("Starting creating thumbnails...");
+
+        // Carica i plugin una sola volta
+        ImageIO.scanForPlugins();
+
+        imageFiles.parallelStream().forEach(Elementi::processImage);
+
+        long end = System.nanoTime();
+        log.info("Tempo medio per thumbnail: {} ms", ((double) (end - start) / 1_000_000) / imageFiles.size());
+        log.info("Tempo totale: {} ms", (double) (end - start) / 1_000_000);
+    }
+
+    private static void processImage(File imageFile) {
+        try {
+            // Carica l'immagine
+            BufferedImage image = ImageIO.read(imageFile);
+            if (image == null) {
+                log.warn("Formato non supportato o file corrotto: {}", imageFile.getName());
+                return;
+            }
+
+            // Crea cartella di output
+            Path outputDirectory = imageFile.toPath().getParent().resolve("thumbnails");
+            if (Files.notExists(outputDirectory)) {
+                Files.createDirectories(outputDirectory);
+            }
+
+            // Calcola le nuove dimensioni
+            int originalWidth = image.getWidth();
+            int originalHeight = image.getHeight();
+            int maxLongSide = 1200;
+
+            int newWidth = (originalWidth >= originalHeight) ? maxLongSide
+                    : (int) ((double) maxLongSide / originalHeight * originalWidth);
+            int newHeight = (originalWidth >= originalHeight) ?
+                    (int) ((double) maxLongSide / originalWidth * originalHeight) : maxLongSide;
+
+            // Genera la thumbnail
+            Path thumbnailPath = outputDirectory
+                    .resolve(imageFile.getName().replaceFirst("\\.\\w+$", ".jpg")); //Forza .jpg
+            Thumbnails.of(image)
+                    .size(newWidth, newHeight)
+                    .outputQuality(0.9)
+                    .toFile(thumbnailPath.toFile());
+
+            log.info("Thumbnail created: {}", thumbnailPath);
+        } catch (IOException e) {
+            log.error("Errore nella creazione della thumbnail per {}", imageFile, e);
+        }
+    }
+
+    private static boolean isTiffImage(String formatoFile){
+        return formatoFile.equals(MimeTypeEnum.IMAGE_TIFF.getAbbreviation());
+    }
 }
